# IARC10_Autonomy

./: .gitmodules  dumb_lawnmower.cpp  dumb_lawnmower.h  local_setup.bash
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/behaviortree_cpp/share/ament_index/resource_index/parent_prefix_path/: behaviortree_cpp
install/behaviortree_cpp/share/behaviortree_cpp/: local_setup.sh  package.sh
install/behaviortree_ros2/include/bt_executor_parameters/: bt_executor_parameters.hpp
install/behaviortree_ros2/share/behaviortree_ros2/: package.sh
install/bt_drone/share/bt_drone/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/btcpp_ros2_interfaces/share/btcpp_ros2_interfaces/: local_setup.sh  package.bash  package.sh  package.zsh
install/btcpp_ros2_samples/lib/btcpp_ros2_samples/: bool_client  bool_server  sample_bt_executor  sleep_client  sleep_client_dyn  sleep_server  subscriber_test
install/btcpp_ros2_samples/share/ament_index/resource_index/parent_prefix_path/: btcpp_ros2_samples
install/btcpp_ros2_samples/share/btcpp_ros2_samples/: local_setup.sh  package.bash  package.sh  package.zsh
install/the_tree/share/the_tree/: package.bash  package.zsh
log/: latest_build  latest_list
par_a_star/src/: astar.cpp  astar.h  bitmap.txt  constants.h  generate_mine_map.cpp  generate_mine_map.h  generate_mine_map.out  main  main.cpp  main.out  minemap.txt  old main.cpp  output.txt  run.sh  visualise.ipynb  visualise.py
src/bt_drone/: CMakeLists.txt  package.xml
src/bt_drone/include/bt_drone/: battery_check.hpp  frustumbug.hpp  frustumbug_sub.hpp  get_mine_location.hpp  goal_check.hpp  initiate_blackboard.hpp  pose2d.hpp  poseNED.hpp  route_gen.hpp  search_start.hpp  shutdown.hpp  tf_check.hpp  waypoint_gen.hpp
src/bt_drone/logs_to_look_at/: log1_testCmake.txt
src/bt_drone/src/: battery_check.cpp  frustumbug.cpp  frustumbug_sub.cpp  get_mine_location.cpp  goal_check.cpp  initiate_blackboard.cpp  route_gen.cpp  search_start.cpp  shutdown.cpp  tf_check.cpp  waypoint_gen.cpp
src/bt_drone/tests/: get_mine_location_test.cpp  route_gen_test.cpp  search_start_test.cpp  wp_test.cpp
src/bt_drone/trees/: test_tree.xml
src/the_tree/: CMakeLists.txt  package.xml
src/the_tree/include/the_tree/: waypoint_gen.hpp
src/utils/: a_star.cpp  a_star.hpp  generate_minemap.cpp  generate_minemap.hpp  map_discovered_area.cpp  map_discovered_area.hpp
